<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:padding="21dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo"
        android:textColor="@color/colorRed"
        android:textSize="20dp"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:id="@+id/rdgCachorro">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rdbBorder"
            android:checked="true"
            android:id="@+id/rdbBorder"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rdbPitBull"
            android:id="@+id/rdbPitBull"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rdbPastorAlemao"
            android:id="@+id/rdbpastorAlemao"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rdbPastorCanadense"
            android:id="@+id/rdbPastorCanadense" />

    </RadioGroup>


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ckbFemea"
        android:id="@+id/ckbFemea"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ckbAdestrado"
        android:id="@+id/ckbAdestrado"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ckbVacina"
        android:checked="true"
        android:id="@+id/ckbVacina"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCalc"
        android:onClick="calcular"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtValor"
        android:textAlignment="center"
        android:textSize="45dp"
        android:id="@+id/valor"/>

</LinearLayout>
